Fix login/register page content - removed SEO references, updated to music promotion branding

--- a/app.html
+++ b/app.html
@@ -5233,8 +5233,8 @@
                             </svg>
                             Orion Music
                         </div>
-                        <h1>Turn Data Into Dominance.</h1>
-                        <p>Log in to access your SEO intelligence platform and accelerate growth.</p>
+                        <h1>Elevate Your Music Career.</h1>
+                        <p>Log in to access your dashboard and manage your music promotion campaigns.</p>
                     </div>
                     
                     <!-- Right Panel - Form -->
@@ -6333,8 +6333,8 @@
                             </svg>
                             Orion Music
                         </div>
-                        <h1>Start Your SEO Journey.</h1>
-                        <p>Join thousands of professionals using Orion Music to dominate search rankings and drive organic growth.</p>
+                        <h1>Start Your Music Journey.</h1>
+                        <p>Join thousands of artists using Orion Music to promote their music and earn commissions.</p>
                     </div>
                     
                     <!-- Right Panel - Form -->
