--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', sans-serif;
-            background: #0a0a0a;
-            color: #ffffff;
+            background: #f0f9ff;
+            color: #1e3a5f;
             overflow-x: hidden;
         }
 
@@ -28,11 +28,11 @@
             top: 0;
             left: 0;
             right: 0;
-            background: rgba(10, 10, 10, 0.95);
+            background: rgba(255, 255, 255, 0.95);
             backdrop-filter: blur(10px);
             padding: 20px 0;
             z-index: 1000;
-            border-bottom: 1px solid rgba(249, 115, 22, 0.1);
+            border-bottom: 1px solid rgba(0, 191, 255, 0.2);
             transition: all 0.3s ease;
         }
 
@@ -53,7 +53,7 @@
         .logo {
             font-size: 28px;
             font-weight: 800;
-            background: linear-gradient(135deg, #f97316, #ea580c);
+            background: linear-gradient(135deg, #00BFFF, #00CED1);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
@@ -83,12 +83,12 @@
             left: 0;
             width: 0;
             height: 2px;
-            background: linear-gradient(90deg, #f97316, #ea580c);
+            background: linear-gradient(90deg, #00BFFF, #00CED1);
             transition: width 0.3s ease;
         }
 
         .nav-links a:hover {
-            color: #f97316;
+            color: #00CED1;
         }
 
         .nav-links a:hover::after {
@@ -97,7 +97,7 @@
 
         .cta-btn {
             padding: 12px 30px;
-            background: linear-gradient(135deg, #f97316, #ea580c);
+            background: linear-gradient(135deg, #00BFFF, #00CED1);
             color: white;
             border: none;
             border-radius: 25px;
@@ -110,7 +110,7 @@
 
         .cta-btn:hover {
             transform: translateY(-2px);
-            box-shadow: 0 10px 30px rgba(249, 115, 22, 0.4);
+            box-shadow: 0 10px 30px rgba(0, 206, 209, 0.4);
         }
 
         /* Hero Section */
@@ -130,7 +130,7 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background: radial-gradient(circle at 50% 50%, rgba(249, 115, 22, 0.1) 0%, transparent 50%);
+            background: radial-gradient(circle at 50% 50%, rgba(0, 191, 255, 0.15) 0%, transparent 50%);
             animation: pulse 8s ease-in-out infinite;
         }
 
@@ -151,7 +151,7 @@
             font-weight: 900;
             line-height: 1.1;
             margin-bottom: 20px;
-            background: linear-gradient(135deg, #ffffff, #f97316);
+            background: linear-gradient(135deg, #1e3a5f, #00CED1);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
@@ -175,7 +175,7 @@
 
         .btn-primary {
             padding: 18px 40px;
-            background: linear-gradient(135deg, #f97316, #ea580c);
+            background: linear-gradient(135deg, #00BFFF, #00CED1);
             color: white;
             border: none;
             border-radius: 30px;
@@ -189,14 +189,14 @@
 
         .btn-primary:hover {
             transform: translateY(-3px);
-            box-shadow: 0 15px 40px rgba(249, 115, 22, 0.5);
+            box-shadow: 0 15px 40px rgba(0, 206, 209, 0.5);
         }
 
         .btn-secondary {
             padding: 18px 40px;
             background: transparent;
-            color: white;
-            border: 2px solid #f97316;
+            color: #1e3a5f;
+            border: 2px solid #00CED1;
             border-radius: 30px;
             font-weight: 600;
             font-size: 18px;
@@ -207,7 +207,7 @@
         }
 
         .btn-secondary:hover {
-            background: rgba(249, 115, 22, 0.1);
+            background: rgba(0, 206, 209, 0.1);
             transform: translateY(-3px);
         }
 
@@ -225,7 +225,7 @@
         /* Stats Section */
         .stats {
             padding: 80px 20px;
-            background: linear-gradient(135deg, rgba(249, 115, 22, 0.05), rgba(234, 88, 12, 0.05));
+            background: linear-gradient(135deg, rgba(0, 191, 255, 0.08), rgba(0, 206, 209, 0.08));
         }
 
         .stats-container {
@@ -240,21 +240,21 @@
             text-align: center;
             padding: 40px 20px;
             border-radius: 20px;
-            background: rgba(26, 26, 46, 0.5);
-            border: 1px solid rgba(249, 115, 22, 0.2);
+            background: rgba(255, 255, 255, 0.8);
+            border: 1px solid rgba(0, 191, 255, 0.3);
             transition: all 0.3s ease;
         }
 
         .stat-card:hover {
             transform: translateY(-10px);
-            box-shadow: 0 20px 40px rgba(249, 115, 22, 0.2);
-            border-color: rgba(249, 115, 22, 0.5);
+            box-shadow: 0 20px 40px rgba(0, 191, 255, 0.2);
+            border-color: rgba(0, 206, 209, 0.5);
         }
 
         .stat-number {
             font-size: 56px;
             font-weight: 900;
-            background: linear-gradient(135deg, #f97316, #ea580c);
+            background: linear-gradient(135deg, #00BFFF, #00CED1);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
@@ -277,7 +277,7 @@
             font-size: 48px;
             font-weight: 900;
             margin-bottom: 20px;
-            background: linear-gradient(135deg, #ffffff, #f97316);
+            background: linear-gradient(135deg, #1e3a5f, #00CED1);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
@@ -303,9 +303,9 @@
 
         .about-card {
             padding: 40px;
-            background: linear-gradient(135deg, rgba(26, 26, 46, 0.8), rgba(22, 33, 62, 0.8));
+            background: linear-gradient(135deg, rgba(255, 255, 255, 0.9), rgba(224, 246, 255, 0.9));
             border-radius: 20px;
-            border: 1px solid rgba(249, 115, 22, 0.2);
+            border: 1px solid rgba(0, 191, 255, 0.2);
             transition: all 0.5s ease;
             position: relative;
             overflow: hidden;
@@ -318,7 +318,7 @@
             left: 0;
             right: 0;
             height: 4px;
-            background: linear-gradient(90deg, #f97316, #ea580c);
+            background: linear-gradient(90deg, #00BFFF, #00CED1);
             transform: scaleX(0);
             transition: transform 0.5s ease;
         }
@@ -329,7 +329,7 @@
 
         .about-card:hover {
             transform: translateY(-10px);
-            box-shadow: 0 20px 50px rgba(249, 115, 22, 0.3);
+            box-shadow: 0 20px 50px rgba(0, 191, 255, 0.3);
         }
 
         .about-icon {
@@ -340,7 +340,7 @@
         .about-card h3 {
             font-size: 24px;
             margin-bottom: 15px;
-            color: #ffffff;
+            color: #1e3a5f;
         }
 
         .about-card p {
@@ -351,7 +351,7 @@
         /* Services Section */
         .services {
             padding: 120px 20px;
-            background: linear-gradient(135deg, rgba(249, 115, 22, 0.03), transparent);
+            background: linear-gradient(135deg, rgba(0, 191, 255, 0.05), transparent);
         }
 
         .services-grid {
@@ -364,23 +364,23 @@
 
         .service-card {
             padding: 40px 30px;
-            background: rgba(26, 26, 46, 0.6);
+            background: rgba(255, 255, 255, 0.8);
             border-radius: 20px;
-            border: 1px solid rgba(249, 115, 22, 0.1);
+            border: 1px solid rgba(0, 191, 255, 0.2);
             transition: all 0.4s ease;
             cursor: pointer;
         }
 
         .service-card:hover {
             transform: translateY(-10px) scale(1.02);
-            border-color: rgba(249, 115, 22, 0.5);
-            box-shadow: 0 20px 50px rgba(249, 115, 22, 0.2);
+            border-color: rgba(0, 206, 209, 0.5);
+            box-shadow: 0 20px 50px rgba(0, 191, 255, 0.2);
         }
 
         .service-icon {
             width: 70px;
             height: 70px;
-            background: linear-gradient(135deg, #f97316, #ea580c);
+            background: linear-gradient(135deg, #00BFFF, #00CED1);
             border-radius: 50%;
             display: flex;
             align-items: center;
@@ -397,7 +397,7 @@
         .service-card h3 {
             font-size: 22px;
             margin-bottom: 15px;
-            color: #ffffff;
+            color: #1e3a5f;
         }
 
         .service-card p {
@@ -424,7 +424,7 @@
             top: 0;
             bottom: 0;
             width: 2px;
-            background: linear-gradient(180deg, #f97316, #ea580c);
+            background: linear-gradient(180deg, #00BFFF, #00CED1);
             transform: translateX(-50%);
         }
 
@@ -442,15 +442,15 @@
         .timeline-content {
             flex: 1;
             padding: 30px;
-            background: linear-gradient(135deg, rgba(26, 26, 46, 0.8), rgba(22, 33, 62, 0.8));
+            background: linear-gradient(135deg, rgba(255, 255, 255, 0.9), rgba(224, 246, 255, 0.9));
             border-radius: 20px;
-            border: 1px solid rgba(249, 115, 22, 0.2);
+            border: 1px solid rgba(0, 191, 255, 0.2);
             transition: all 0.4s ease;
         }
 
         .timeline-content:hover {
             transform: translateX(-10px);
-            box-shadow: 0 15px 40px rgba(249, 115, 22, 0.3);
+            box-shadow: 0 15px 40px rgba(0, 191, 255, 0.3);
         }
 
         .timeline-item:nth-child(even) .timeline-content:hover {
@@ -463,20 +463,20 @@
             transform: translateX(-50%);
             width: 50px;
             height: 50px;
-            background: linear-gradient(135deg, #f97316, #ea580c);
+            background: linear-gradient(135deg, #00BFFF, #00CED1);
             border-radius: 50%;
             display: flex;
             align-items: center;
             justify-content: center;
             font-weight: 900;
             font-size: 20px;
-            box-shadow: 0 0 0 10px rgba(10, 10, 10, 1);
+            box-shadow: 0 0 0 10px rgba(240, 249, 255, 1);
         }
 
         .timeline-content h3 {
             font-size: 24px;
             margin-bottom: 15px;
-            color: #ffffff;
+            color: #1e3a5f;
         }
 
         .timeline-content p {
@@ -487,7 +487,7 @@
         /* Artist Signup Section */
         .artist-signup {
             padding: 120px 20px;
-            background: linear-gradient(135deg, rgba(249, 115, 22, 0.05), rgba(234, 88, 12, 0.05));
+            background: linear-gradient(135deg, rgba(0, 191, 255, 0.08), rgba(0, 206, 209, 0.08));
         }
 
         .signup-container {
@@ -495,9 +495,9 @@
             margin: 0 auto;
             text-align: center;
             padding: 60px 40px;
-            background: linear-gradient(135deg, rgba(26, 26, 46, 0.9), rgba(22, 33, 62, 0.9));
+            background: linear-gradient(135deg, rgba(255, 255, 255, 0.95), rgba(224, 246, 255, 0.95));
             border-radius: 30px;
-            border: 2px solid rgba(249, 115, 22, 0.3);
+            border: 2px solid rgba(0, 191, 255, 0.3);
             position: relative;
             overflow: hidden;
         }
@@ -509,7 +509,7 @@
             left: -50%;
             width: 200%;
             height: 200%;
-            background: radial-gradient(circle, rgba(249, 115, 22, 0.1) 0%, transparent 70%);
+            background: radial-gradient(circle, rgba(0, 191, 255, 0.1) 0%, transparent 70%);
             animation: rotate 20s linear infinite;
         }
 
@@ -526,7 +526,7 @@
         .signup-container h2 {
             font-size: 42px;
             margin-bottom: 20px;
-            background: linear-gradient(135deg, #ffffff, #f97316);
+            background: linear-gradient(135deg, #1e3a5f, #00CED1);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
@@ -548,9 +548,9 @@
         .signup-option {
             padding: 20px 40px;
             background: transparent;
-            border: 2px solid #f97316;
+            border: 2px solid #00CED1;
             border-radius: 15px;
-            color: white;
+            color: #1e3a5f;
             font-weight: 600;
             font-size: 16px;
             cursor: pointer;
@@ -561,9 +561,10 @@
         }
 
         .signup-option:hover {
-            background: linear-gradient(135deg, #f97316, #ea580c);
+            background: linear-gradient(135deg, #00BFFF, #00CED1);
+            color: white;
             transform: scale(1.05);
-            box-shadow: 0 10px 30px rgba(249, 115, 22, 0.4);
+            box-shadow: 0 10px 30px rgba(0, 206, 209, 0.4);
         }
 
         /* Contact Section */
@@ -586,7 +587,7 @@
         .contact-info h2 {
             font-size: 42px;
             margin-bottom: 20px;
-            background: linear-gradient(135deg, #ffffff, #f97316);
+            background: linear-gradient(135deg, #1e3a5f, #00CED1);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
@@ -604,22 +605,22 @@
             align-items: center;
             gap: 20px;
             padding: 20px;
-            background: rgba(26, 26, 46, 0.5);
+            background: rgba(255, 255, 255, 0.8);
             border-radius: 15px;
             margin-bottom: 20px;
-            border: 1px solid rgba(249, 115, 22, 0.1);
+            border: 1px solid rgba(0, 191, 255, 0.2);
             transition: all 0.3s ease;
         }
 
         .contact-method:hover {
-            border-color: rgba(249, 115, 22, 0.5);
+            border-color: rgba(0, 206, 209, 0.5);
             transform: translateX(10px);
         }
 
         .contact-icon {
             width: 50px;
             height: 50px;
-            background: linear-gradient(135deg, #f97316, #ea580c);
+            background: linear-gradient(135deg, #00BFFF, #00CED1);
             border-radius: 50%;
             display: flex;
             align-items: center;
@@ -629,9 +630,9 @@
 
         .contact-form {
             padding: 40px;
-            background: linear-gradient(135deg, rgba(26, 26, 46, 0.8), rgba(22, 33, 62, 0.8));
+            background: linear-gradient(135deg, rgba(255, 255, 255, 0.9), rgba(224, 246, 255, 0.9));
             border-radius: 20px;
-            border: 1px solid rgba(249, 115, 22, 0.2);
+            border: 1px solid rgba(0, 191, 255, 0.2);
         }
 
         .form-group {
@@ -649,10 +650,10 @@
         .form-group textarea {
             width: 100%;
             padding: 15px;
-            background: rgba(10, 10, 10, 0.5);
-            border: 2px solid rgba(249, 115, 22, 0.2);
+            background: rgba(255, 255, 255, 0.9);
+            border: 2px solid rgba(0, 191, 255, 0.2);
             border-radius: 10px;
-            color: white;
+            color: #1e3a5f;
             font-size: 16px;
             transition: all 0.3s ease;
         }
@@ -660,8 +661,8 @@
         .form-group input:focus,
         .form-group textarea:focus {
             outline: none;
-            border-color: #f97316;
-            box-shadow: 0 0 0 3px rgba(249, 115, 22, 0.1);
+            border-color: #00CED1;
+            box-shadow: 0 0 0 3px rgba(0, 206, 209, 0.1);
         }
 
         .form-group textarea {
@@ -672,7 +673,7 @@
         .submit-btn {
             width: 100%;
             padding: 18px;
-            background: linear-gradient(135deg, #f97316, #ea580c);
+            background: linear-gradient(135deg, #00BFFF, #00CED1);
             border: none;
             border-radius: 10px;
             color: white;
@@ -684,14 +685,14 @@
 
         .submit-btn:hover {
             transform: translateY(-2px);
-            box-shadow: 0 15px 40px rgba(249, 115, 22, 0.4);
+            box-shadow: 0 15px 40px rgba(0, 206, 209, 0.4);
         }
 
         /* Footer */
         footer {
             padding: 60px 20px 30px;
-            background: rgba(26, 26, 46, 0.5);
-            border-top: 1px solid rgba(249, 115, 22, 0.1);
+            background: rgba(224, 246, 255, 0.8);
+            border-top: 1px solid rgba(0, 191, 255, 0.2);
         }
 
         .footer-content {
@@ -706,7 +707,7 @@
         .footer-section h3 {
             font-size: 20px;
             margin-bottom: 20px;
-            color: #f97316;
+            color: #00CED1;
         }
 
         .footer-section ul {
@@ -724,7 +725,7 @@
         }
 
         .footer-section a:hover {
-            color: #f97316;
+            color: #00CED1;
             padding-left: 5px;
         }
 
@@ -737,8 +738,8 @@
         .social-link {
             width: 45px;
             height: 45px;
-            background: rgba(249, 115, 22, 0.1);
-            border: 1px solid rgba(249, 115, 22, 0.3);
+            background: rgba(0, 191, 255, 0.1);
+            border: 1px solid rgba(0, 191, 255, 0.3);
             border-radius: 50%;
             display: flex;
             align-items: center;
@@ -748,14 +749,14 @@
         }
 
         .social-link:hover {
-            background: linear-gradient(135deg, #f97316, #ea580c);
+            background: linear-gradient(135deg, #00BFFF, #00CED1);
             transform: translateY(-5px);
         }
 
         .footer-bottom {
             text-align: center;
             padding-top: 30px;
-            border-top: 1px solid rgba(249, 115, 22, 0.1);
+            border-top: 1px solid rgba(0, 191, 255, 0.2);
             color: #6b7280;
         }
 
@@ -767,14 +768,14 @@
             transform: translateX(-50%);
             z-index: 9999;
             padding: 20px 50px;
-            background: linear-gradient(135deg, #f97316, #ea580c);
+            background: linear-gradient(135deg, #00BFFF, #00CED1);
             color: white;
             border: none;
             border-radius: 50px;
             font-weight: 700;
             font-size: 20px;
             cursor: pointer;
-            box-shadow: 0 20px 60px rgba(249, 115, 22, 0.6);
+            box-shadow: 0 20px 60px rgba(0, 206, 209, 0.6);
             transition: all 0.4s ease;
             text-decoration: none;
             display: flex;
@@ -792,7 +793,7 @@
             bottom: 0;
             border-radius: 50px;
             padding: 3px;
-            background: linear-gradient(135deg, #f97316, #ea580c, #f97316);
+            background: linear-gradient(135deg, #00BFFF, #00CED1, #00BFFF);
             -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
             -webkit-mask-composite: xor;
             mask-composite: exclude;
@@ -807,7 +808,7 @@
 
         .floating-login:hover {
             transform: translateX(-50%) scale(1.1);
-            box-shadow: 0 25px 80px rgba(249, 115, 22, 0.8);
+            box-shadow: 0 25px 80px rgba(0, 206, 209, 0.8);
         }
 
         .floating-login-icon {
@@ -817,10 +818,10 @@
 
         @keyframes floatPulse {
             0%, 100% {
-                box-shadow: 0 20px 60px rgba(249, 115, 22, 0.6);
+                box-shadow: 0 20px 60px rgba(0, 206, 209, 0.6);
             }
             50% {
-                box-shadow: 0 20px 80px rgba(249, 115, 22, 0.9);
+                box-shadow: 0 20px 80px rgba(0, 206, 209, 0.9);
             }
         }
 
