--- a/app.html
+++ b/app.html
@@ -148,7 +148,13 @@
             margin-bottom: 48px;
             letter-spacing: -0.3px;
         }
-        .auth-brand-logo svg { color: #00CED1; }
+        .auth-brand-logo img {
+            height: 36px;
+            width: 36px;
+            border-radius: 8px;
+            object-fit: cover;
+            flex: 0 0 auto;
+        }
 
         .auth-brand h1 {
             font-size: 2.4rem;
@@ -369,6 +375,16 @@
             font-weight: 700;
             color: #ffffff;
             letter-spacing: -0.5px;
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+        .header h1 img {
+            height: 26px;
+            width: 26px;
+            border-radius: 6px;
+            object-fit: cover;
+            flex: 0 0 auto;
         }
 
         .menu-btn {
@@ -4583,11 +4599,7 @@
                     <!-- Left Panel - Brand -->
                     <div class="auth-brand">
                         <div class="auth-brand-logo">
-                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M12 2L2 7L12 12L22 7L12 2Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                                <path d="M2 17L12 22L22 17" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                                <path d="M2 12L12 17L22 12" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                            </svg>
+                            <img src="/uploads/logos/logo.jpg" alt="Orion logo">
                             Orion Music
                         </div>
                         <h1 style="font-size: 42px; font-weight: 900; letter-spacing: -1px; line-height: 1.1;">Our work makes music <span style="background: #87CEEB; color: #000; padding: 2px 8px; border-radius: 4px;">standout</span>.</h1>
@@ -4645,12 +4657,15 @@
             return `
                 <div class="page">
                     <div class="header">
-                        <h1>🎵 ORION</h1>
+                        <h1>
+                            <img src="/uploads/logos/logo.jpg" alt="Orion logo">
+                            ORION
+                        </h1>
                         <button class="menu-btn" onclick="navigateTo('mycenter')" style="font-size: 28px; line-height: 1;">👤</button>
                     </div>
 
                     <!-- Creative Banner - Orion Style -->
-                    <div style="background: #0a0a0a; padding: 30px 20px; border-bottom: 1px solid rgba(0, 206, 209, 0.15);">
+                    <div style="background: linear-gradient(180deg, rgba(0,0,0,0.7) 0%, rgba(0,0,0,0.35) 55%, rgba(0,0,0,0.8) 100%), url('/uploads/logos/back.jpg') center/cover no-repeat; padding: 30px 20px; border-bottom: 1px solid rgba(0, 206, 209, 0.15);">
                         <div style="display: flex; align-items: flex-start; justify-content: space-between;">
                             <div>
                                 <h2 style="font-size: 32px; font-weight: 800; color: #ffffff; line-height: 1.1; margin-bottom: 12px;">BETTER<br>CREATIVE</h2>
