--- a/admin.html
+++ b/admin.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <!-- Default API base URL (just base, /api path will be added by code) -->
     <meta name="api-base-url" content="">
     <title>Orion Music ADMIN</title>
