--- a/app.html
+++ b/app.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <meta name="api-base-url" content="/api">
     <title>Orion - Music Promotion Platform</title>
     <style>
@@ -16,12 +16,27 @@
             box-sizing: border-box;
         }
 
+        /* Prevent any element from being wider than viewport */
+        body, html, .page, .auth-page {
+            max-width: 100vw !important;
+            overflow-x: hidden !important;
+        }
+
         body {
             font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', sans-serif;
             background: #000000;
             color: #e4e4e7;
             -webkit-font-smoothing: antialiased;
             -moz-osx-font-smoothing: grayscale;
+            overflow-x: hidden;
+            position: relative;
+            width: 100%;
+            touch-action: pan-y;
+        }
+
+        html {
+            overflow-x: hidden;
+            width: 100%;
         }
 
         .hide { display: none !important; }
@@ -127,6 +142,10 @@
             min-height: 100vh;
             display: flex;
             background-color: #000000;
+            width: 100%;
+            max-width: 100vw;
+            overflow-x: hidden;
+            position: relative;
         }
 
         .auth-brand {
@@ -943,6 +962,10 @@
             min-height: 100vh;
             padding-bottom: 80px;
             background: #000000;
+            width: 100%;
+            max-width: 100vw;
+            overflow-x: hidden;
+            position: relative;
         }
 
         .notice-box {
