Modernize all emoji icons to SVGs across UI

--- a/admin.html
+++ b/admin.html
@@ -1424,7 +1424,7 @@
                 <div class="stats-grid">
                     <div class="stat-card">
                         <div class="stat-card-header">
-                            <div class="stat-icon purple">👥</div>
+                            <div class="stat-icon purple"><svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="#7c3aed" stroke-width="1.75" stroke-linecap="round" stroke-linejoin="round"><path d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"/><circle cx="9" cy="7" r="4"/><path d="M22 21v-2a4 4 0 0 0-3-3.87"/><path d="M16 3.13a4 4 0 0 1 0 7.75"/></svg></div>
                             <div>
                                 <div class="stat-value">${totalUsers || 0}</div>
                                 <div class="stat-label">Total Users</div>
@@ -1433,7 +1433,7 @@
                     </div>
                     <div class="stat-card">
                         <div class="stat-card-header">
-                            <div class="stat-icon green">✓</div>
+                            <div class="stat-icon green"><svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="#059669" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"/><polyline points="22 4 12 14.01 9 11.01"/></svg></div>
                             <div>
                                 <div class="stat-value">${activeUsers || 0}</div>
                                 <div class="stat-label">Active Users</div>
@@ -1442,7 +1442,7 @@
                     </div>
                     <div class="stat-card">
                         <div class="stat-card-header">
-                            <div class="stat-icon blue">💵</div>
+                            <div class="stat-icon blue"><svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="#2563eb" stroke-width="1.75" stroke-linecap="round" stroke-linejoin="round"><line x1="12" x2="12" y1="2" y2="22"/><path d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"/></svg></div>
                             <div>
                                 <div class="stat-value">$${(totalBalance || 0).toFixed(2)}</div>
                                 <div class="stat-label">Total Balance</div>
@@ -1451,7 +1451,7 @@
                     </div>
                     <div class="stat-card">
                         <div class="stat-card-header">
-                            <div class="stat-icon orange">📦</div>
+                            <div class="stat-icon orange"><svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="#00a0a3" stroke-width="1.75" stroke-linecap="round" stroke-linejoin="round"><path d="m7.5 4.27 9 5.15"/><path d="M21 8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16Z"/><path d="m3.3 7 8.7 5 8.7-5"/><path d="M12 22V12"/></svg></div>
                             <div>
                                 <div class="stat-value">${totalProducts || 0}</div>
                                 <div class="stat-label">Total Products</div>
@@ -1460,7 +1460,7 @@
                     </div>
                     <div class="stat-card">
                         <div class="stat-card-header">
-                            <div class="stat-icon purple">⏳</div>
+                            <div class="stat-icon purple"><svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="#7c3aed" stroke-width="1.75" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"/><polyline points="12 6 12 12 16 14"/></svg></div>
                             <div>
                                 <div class="stat-value">${pendingWithdrawCount}</div>
                                 <div class="stat-label">Pending Withdrawals</div>
@@ -1469,7 +1469,7 @@
                     </div>
                     <div class="stat-card">
                         <div class="stat-card-header">
-                            <div class="stat-icon green">💰</div>
+                            <div class="stat-icon green"><svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="#059669" stroke-width="1.75" stroke-linecap="round" stroke-linejoin="round"><path d="M19 7V4a1 1 0 0 0-1-1H5a2 2 0 0 0 0 4h15a1 1 0 0 1 1 1v4h-3a2 2 0 0 0 0 4h3a1 1 0 0 0 1-1v-2a1 1 0 0 0-1-1"/><path d="M3 5v14a2 2 0 0 0 2 2h15a1 1 0 0 0 1-1v-4"/></svg></div>
                             <div>
                                 <div class="stat-value">$${(totalCommission || 0).toFixed(2)}</div>
                                 <div class="stat-label">Total Commission</div>
