--- a/app.html
+++ b/app.html
@@ -1261,6 +1261,7 @@
         }
         .chat-page-image { max-width: 250px; border-radius: 14px; margin-top: 8px; cursor: pointer; }
         .chat-page-time { font-size: 11px; color: #52525b; margin-top: 4px; padding: 0 4px; }
+        .chat-delivered { font-size: 10px; color: #00CED1; margin-left: 6px; font-weight: 500; }
 
         .chat-page-input-area {
             background: rgba(0, 0, 0, 0.9);
@@ -3123,7 +3124,7 @@
                                         ${msg.image_path ? `<img src="${API_BASE_URL.replace('/api', '')}/${msg.image_path}" class="chat-page-image" onclick="viewFullImage('${API_BASE_URL.replace('/api', '')}/${msg.image_path}')" />` : ''}
                                     </div>
                                     <div class="chat-page-time">
-                                        ${formatTimeSafe(msg.created_at)}
+                                        ${formatTimeSafe(msg.created_at)}${msg.sender_type === 'user' ? '<span class="chat-delivered">✓ Delivered</span>' : ''}
                                     </div>
                                 </div>
                             `).join('');
@@ -3376,7 +3377,7 @@
                                     ${msg.image_path ? `<img src="${API_BASE_URL.replace('/api', '')}/${msg.image_path}" class="chat-page-image" onclick="viewFullImage('${API_BASE_URL.replace('/api', '')}/${msg.image_path}')" />` : ''}
                                 </div>
                                 <div class="chat-page-time">
-                                    ${formatTimeSafe(msg.created_at)}
+                                    ${formatTimeSafe(msg.created_at)}${msg.sender_type === 'user' ? '<span class="chat-delivered">✓ Delivered</span>' : ''}
                                 </div>
                             </div>
                         `).join('')}
